[package]
name = "rust_traq"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "1.5"
serde_repr = "0.1.7"

[dependencies.reqwest]
version = "^0.10"
default-features = true
features = ["json"]

[dev-dependencies]
